# HumbleWebots2023b

./: README.md
cpp_client/: CMakeLists.txt  package.xml
cpp_client/src/: client_illuminazione.cpp  client_mix.cpp  client_porta.cpp  line_follower_finale.cpp  my_client.cpp  my_client_v3.cpp  my_client_v4.cpp  my_client_v5.cpp  my_simpleClient.cpp  subscriber_sensors.cpp  tiago_line_client.cpp  tiago_line_completo.cpp  tiago_line_follower.cpp  tiago_line_follower_luce.cpp  tiago_line_follower_olio.cpp
cpp_prob3/: CMakeLists.txt  package.xml  webots_ros2_plugin.xml
cpp_prob3/include/cpp_prob3/: WebotsRos2Plugin.hpp
cpp_prob3/src/: WebotsRos2Plugin.cpp
final/: package.xml  setup.py
final/final/: subscriberOrientamento.py  subscriberPosizione.py  tiago_base_driver.py
final/launch/: final_launch.py
final/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
final/worlds/: .final_robot.wbproj  .scivolamento_robot.wbproj  final_robot.wbt  scivolamento_robot.wbt
mix/: package.xml  setup.cfg  setup.py
mix/launch/: mix_launch.py
mix/mix/: pioneer2_driver.py  prob3_driver.py  super.py  tiago_base_driver.py  tiago_line_follower.py  tiago_obstacle_avoidance.py
mix/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
mix/worlds/: .base_robot.wbproj  .base_robot_2.wbproj  base_robot.wbt  base_robot_2.wbt  base_robot_3.wbt
mix_cpp/: CMakeLists.txt  package.xml
mix_cpp/src/: line_follower.cpp  prova.cpp
odometria_test/: package.xml  setup.cfg  setup.py
odometria_test/launch/: test_odometria_launch.py
odometria_test/odometria_test/: pioneer2_driver.py  plot.py  prob3_driver.py  prova.csv  prova1.csv  tiago_base_driver.py
odometria_test/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
odometria_test/worlds/: .odometria_robot.wbproj  odometria_robot.wbt
olio_test/: package.xml  setup.cfg  setup.py
olio_test/launch/: test_olio_launch.py
olio_test/olio_test/: plot.py  prova.csv  prova1.csv  tiago_base_driver.py  tiago_line_follower.py
olio_test/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
olio_test/worlds/: .scivolamento_robot.wbproj  scivolamento_robot.wbt
prob3_pack/: package.xml  setup.cfg  setup.py
prob3_pack/launch/: prob_launch.py
prob3_pack/prob3_pack/: Funzioni.py  NodoClient.py  NodoClient_v3.py  ServiceProb3.py  prob3_driver.py  prob3_driver_v2.py  prob3_driver_v3.py  prob3_driver_v4.py  publisher_JointPos.py  publisher_JointVel.py  subscriber_JointPosition.py
prob3_pack/resource/: my_robot.urdf
prob3_pack/worlds/: .p-rob3.wbproj  .p-rob3_2023a.wbproj  .prob.wbproj  p-rob3.wbt  p-rob3_2023a.wbt  prob.wbt
test_camera/: package.xml  setup.cfg  setup.py
test_camera/launch/: launch_test_camera.py
test_camera/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
test_camera/test_camera/: tiago_base_driver.py
test_camera/worlds/: .test_camera_riconoscimento.wbproj  test_camera_riconoscimento.wbt
test_finale/: package.xml  setup.cfg  setup.py
test_finale/launch/: launch_test_finale.py
test_finale/resource/: Beep.urdf  Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
test_finale/test_finale/: beep_driver.py  client_porta1.py  client_porta2.py  line_follower.py  tiago_base_driver.py  tiago_illuminazione.py  tiago_line_follower.py
test_finale/worlds/: .test_finale.wbproj  .test_finale1.wbproj  test_finale.wbt  test_finale1.wbt
test_luce/: package.xml  setup.cfg  setup.py
test_luce/launch/: test_luce.py
test_luce/resource/: Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
test_luce/test_luce/: FluidoOff_NoReal.csv  FluidoOff_Real.csv  prob3_driver.py  tiago_base_driver.py
test_luce/worlds/: .test_luce.wbproj  .test_luce_NoBackGround.wbproj  .test_luce_new.wbproj  .test_scivolamento_solido.wbproj  .test_scivolamento_solido_senza.wbproj  test_luce.wbt  test_luce_NoBackGround.wbt  test_luce_new.wbt  test_scivolamento_solido.wbt  test_scivolamento_solido_senza.wbt
test_oggetto/: package.xml  setup.cfg  setup.py
test_oggetto/launch/: test_oggetto.py
test_oggetto/resource/: Beep.urdf  Pioneer2.urdf  Prob3.urdf  TiagoBase.urdf
test_oggetto/test_oggetto/: beep_driver.py  tiago_base_driver.py
test_porta/: package.xml  setup.cfg  setup.py
test_slittamento/: package.xml  setup.cfg  setup.py
test_uomo/: package.xml  setup.cfg  setup.py
(+43 files in other folders)
