<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_prob3</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="raul@todo.todo">raul</maintainer>
  <license>TODO: License declaration</license>


  <build_depend>ros_environment</build_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>fp_core_msgs</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
